// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`public export surface reducer export names are stable 1`] = `
[
  "FrameworkErrorCodes",
  "StaleContractArtifactError",
  "asPlayerId",
  "assertCardAllowedInContainer",
  "boardInput",
  "boardRef",
  "boardRefKey",
  "boardRefSchema",
  "boardTarget",
  "cardInput",
  "cardTarget",
  "choiceTarget",
  "contractFingerprint",
  "createContractAuthoring",
  "createDerivedResolver",
  "createReducerBundle",
  "createReducerEdit",
  "createReducerOps",
  "createReducerTransaction",
  "createStateQueries",
  "createTableQueries",
  "defineCardAction",
  "defineDerived",
  "defineEffect",
  "defineGame",
  "defineGameContract",
  "defineInputs",
  "defineInteraction",
  "defineInteractionRule",
  "definePhase",
  "definePhaseStage",
  "defineStage",
  "defineStaticView",
  "defineStepPhase",
  "defineView",
  "formInput",
  "isPerPlayer",
  "isPerPlayerBoardRef",
  "isPlayerId",
  "isSharedBoardRef",
  "isStaleContractArtifactError",
  "many",
  "noopDiagnosticsSink",
  "normalizeCommandParams",
  "parseBoardRefKey",
  "perPlayer",
  "perPlayerBoardRef",
  "perPlayerEntries",
  "perPlayerGet",
  "perPlayerHas",
  "perPlayerKeys",
  "perPlayerMap",
  "perPlayerRequire",
  "perPlayerSchema",
  "perPlayerSet",
  "perPlayerSize",
  "perPlayerValues",
  "pipe",
  "promptInput",
  "rngInput",
  "setActivePlayers",
  "sharedBoardRef",
  "sparseCounts",
  "sparseMap",
]
`;

exports[`public export surface reducer/advanced export names are stable 1`] = `
[
  "FrameworkErrorCodes",
  "applySetupBootstrap",
  "assumeManifestSchema",
  "cloneManifestDefault",
  "createClientParamSchemasByPhase",
  "createManifestGameStateSchema",
  "createManifestRuntimeSchema",
  "createManifestStringLiteralSchema",
  "dealToPlayerBoardContainer",
  "dealToPlayerZone",
  "isManifestScopedSchema",
  "markManifestScopedSchema",
  "resolveManifestPlayerIds",
  "seedSharedBoardContainer",
  "seedSharedBoardSpace",
  "shuffle",
]
`;

exports[`public export surface runtime export names are stable 1`] = `
[
  "PluginRuntime",
  "createWorkspaceUIContract",
]
`;

exports[`public export surface runtime/primitives export names are stable 1`] = `
[
  "Board",
  "BoardEdgeTarget",
  "BoardHexGrid",
  "BoardHexView",
  "BoardRoot",
  "BoardSpaceTarget",
  "BoardState",
  "BoardTarget",
  "BoardVertexTarget",
  "Dice",
  "DiceRoot",
  "DiceValues",
  "Game",
  "GameChrome",
  "GameRoot",
  "HandSurfaceView",
  "Interaction",
  "InteractionCardInput",
  "InteractionDescription",
  "InteractionDialog",
  "InteractionFormPrimitive",
  "InteractionInput",
  "InteractionLabel",
  "InteractionRoot",
  "InteractionRoutes",
  "InteractionState",
  "InteractionSubmit",
  "InteractionSwitch",
  "InteractionTrigger",
  "InteractionUnavailableMessage",
  "InteractionValidationMessage",
  "Phase",
  "PhaseSwitch",
  "PlayerRoster",
  "PlayerRosterBadges",
  "PlayerRosterEmpty",
  "PlayerRosterList",
  "PlayerRosterName",
  "PlayerRosterRoot",
  "PlayerRosterScore",
  "PlayerRosterSwitchButton",
  "Prompt",
  "PromptDialog",
  "PromptInbox",
  "PromptInboxEmpty",
  "PromptInboxItems",
  "PromptInboxRoot",
  "PromptMessage",
  "PromptOption",
  "PromptOptions",
  "PromptRoot",
  "PromptTitle",
  "UI",
  "UIRoot",
  "Zone",
  "ZoneCardAction",
  "ZoneCardAt",
  "ZoneItem",
  "ZoneList",
  "ZonePileCards",
  "ZonePileCount",
  "ZonePileDescription",
  "ZonePileLabel",
  "ZonePileRoot",
  "ZonePileTrigger",
  "ZoneRoot",
  "ZoneTopCard",
  "composeEventHandlers",
  "createZoneCardRenderItem",
  "decodeAuthoredCardIntent",
  "descriptorsHaveDestinationInput",
  "dropTargetIdFor",
  "normalizeDiceState",
  "renderPrimitive",
  "useBoardPrimitiveContext",
  "useCardIntentAdapter",
  "useDicePrimitiveContext",
  "useGameActionError",
  "useInteractionPrimitiveContext",
  "useOptionalZonePrimitiveContext",
  "useResolvedCardTargetValue",
  "useZoneCardContext",
  "useZoneCards",
  "useZonePileContext",
  "useZonePrimitiveContext",
]
`;

exports[`public export surface runtime/workspace-contract export names are stable 1`] = `
[
  "createWorkspaceUIContract",
]
`;

exports[`public export surface ui export names are stable 1`] = `
[
  "ActionButton",
  "ActionGroup",
  "ActionPanel",
  "CardDragSurface",
  "CardDropTargetView",
  "CardFace",
  "ChromeSuppressionProvider",
  "CostDisplay",
  "DefaultChessPiece",
  "DefaultEmptySlot",
  "DefaultGridCell",
  "DefaultGridPiece",
  "DefaultHexEdge",
  "DefaultHexTile",
  "DefaultHexVertex",
  "DefaultNetworkEdge",
  "DefaultNetworkNode",
  "DefaultNetworkPiece",
  "DefaultSlotItem",
  "DefaultSlotOccupant",
  "DefaultTrackConnection",
  "DefaultTrackJump",
  "DefaultTrackPiece",
  "DefaultTrackSpace",
  "DefaultZone",
  "DefaultZonePiece",
  "DefaultZonePieces",
  "Dialog",
  "DialogClose",
  "DialogContent",
  "DialogDescription",
  "DialogFooter",
  "DialogHeader",
  "DialogOverlay",
  "DialogPortal",
  "DialogTitle",
  "DialogTrigger",
  "DiceRoller",
  "Drawer",
  "DrawerClose",
  "DrawerContent",
  "DrawerDescription",
  "DrawerFooter",
  "DrawerHeader",
  "DrawerOverlay",
  "DrawerPortal",
  "DrawerTitle",
  "DrawerTrigger",
  "ErrorBoundary",
  "GameEndDisplay",
  "GameSkeleton",
  "Hand",
  "HandDock",
  "HandView",
  "HexGrid",
  "Input",
  "Label",
  "MobileHandTrayProvider",
  "MoreActions",
  "NetworkGraph",
  "PhaseIndicator",
  "PlayArea",
  "PrimaryActionButton",
  "PrimaryButton",
  "ResourceCounter",
  "ResourceCounterCount",
  "ResourceCounterIcon",
  "ResourceCounterItem",
  "ResourceCounterLabel",
  "ResourceCounterRoot",
  "Select",
  "SelectContent",
  "SelectItem",
  "SelectTrigger",
  "SlotSystem",
  "SquareGrid",
  "StagingZone",
  "ThemeProvider",
  "ThemedButton",
  "Toast",
  "ToastActions",
  "ToastProvider",
  "TrackBoard",
  "ZoneMap",
  "arcadeTheme",
  "buttonStyle",
  "calculateViewBox",
  "chipStyle",
  "createHexBoardView",
  "createResourceCounter",
  "cssVar",
  "cssVarOr",
  "deriveBoardTheme",
  "dropTargetVisualStateDataAttributes",
  "getThemePreset",
  "hexColor",
  "hexUtils",
  "intentForVariant",
  "isHexColor",
  "mergeTheme",
  "motionDuration",
  "normalizeHexBoardInput",
  "normalizeSquareBoardInput",
  "parseHexColor",
  "playerColor",
  "resolveTheme",
  "studioTheme",
  "surfaceStyle",
  "tabletopTheme",
  "themeToCssVars",
  "toAlgebraic",
  "toNumeric",
  "toTrackBoardData",
  "useBoardTheme",
  "useCardDragSurface",
  "useChromeSuppression",
  "useIsMobile",
  "useMobileHandTrayActive",
  "useRegisterMobileHand",
  "useTheme",
  "useThemeCssVars",
  "visualStateDataAttributes",
]
`;

exports[`public export surface types export names are stable 1`] = `
[
  "buildTypedRecord",
  "defineTopologyManifest",
  "expectTypedId",
  "isTypedId",
]
`;

exports[`public export surface testing export names are stable 1`] = `
[
  "FixturePluginRuntime",
  "StaleContractArtifactError",
  "UI_SCENARIO_FIXTURE_BUNDLE_SCHEMA_VERSION",
  "UI_SCENARIO_FIXTURE_SCHEMA_VERSION",
  "UI_SCENARIO_FIXTURE_SUPPORTED_BROWSER_PROTOCOL_MAJOR",
  "assertDeterministicUIScenarioFixture",
  "assertSupportedBrowserInteractionProtocol",
  "assertUIStepExpectationSatisfied",
  "assertUniqueReplayIdentity",
  "canonicalUIFixtureJson",
  "canonicalizeUIFixtureJson",
  "canonicalizeUIScenarioFixture",
  "compileUIScenarioFixture",
  "createDeterministicIdFactory",
  "createExpectApi",
  "createFixtureRuntime",
  "createTestRuntime",
  "defaultFixtureEnvironmentInit",
  "defineBase",
  "defineScenario",
  "digestUIFixtureJson",
  "digestUIFixtureRequest",
  "digestUIFixtureTransportRequest",
  "digestUIScenarioFixture",
  "fixtureEnvironmentInitFor",
  "isSha256Digest",
  "isStaleContractArtifactError",
  "parseUIScenarioFixture",
  "parseUIScenarioFixtureBundleIndex",
  "portableSemanticReplayStepSchema",
  "serializeUIScenarioFixture",
  "uiFixtureFrameSchema",
  "uiFixturePluginStateSnapshotSchema",
  "uiFixtureTransportExchangeSchema",
  "uiReplayExecutionSchema",
  "uiReplayRequestSchema",
  "uiResolvedReplayIdentitySchema",
  "uiScenarioFixtureBundleIndexSchema",
  "uiScenarioFixtureSchema",
  "uiScenarioReplayStepSchema",
  "uiStepExpectationSchema",
]
`;

exports[`public export surface browser-interaction export names are stable 1`] = `
[
  "BROWSER_INTERACTION_ACTUATOR_KINDS",
  "BROWSER_INTERACTION_ATTRIBUTES",
  "BROWSER_INTERACTION_CANDIDATE_STATES",
  "BROWSER_INTERACTION_READINESS_VALUES",
  "BROWSER_INTERACTION_RECORD_ROLES",
  "DREAMBOARD_BROWSER_INTERACTION_PROTOCOL_NAME",
  "DREAMBOARD_BROWSER_INTERACTION_PROTOCOL_VERSION",
  "GAMEPLAY_BROWSER_INTERACTION_EFFECT_KINDS",
  "GAMEPLAY_BROWSER_INTERACTION_INTENTS",
  "GAMEPLAY_BROWSER_INTERACTION_SURFACE",
  "actuatorIdentityKey",
  "assertBrowserInteractionEffectPattern",
  "browserGameplayInteractionSchema",
  "browserGameplaySurfaceSnapshotSchema",
  "browserInteractionActuatorSchema",
  "browserInteractionDiagnosticSchema",
  "browserInteractionEffectPatternMatches",
  "browserInteractionEffectPatternSchema",
  "browserInteractionEffectSchema",
  "browserInteractionSnapshotSchema",
  "browserSemanticSurfaceSnapshotSchema",
  "browserUnknownSurfaceSnapshotSchema",
  "compareStableJson",
  "createBrowserInteractionActuatorAttributes",
  "createBrowserInteractionActuatorKey",
  "createBrowserInteractionRegistry",
  "createBrowserInteractionRootAttributes",
  "createGameplayActuatorAttributes",
  "createGameplayInteractionRootAttributes",
  "decodeBrowserInteractionEffect",
  "decodeBrowserInteractionEffectPattern",
  "decodeCanonicalCandidateValue",
  "defaultBrowserInteractionRegistry",
  "defineBrowserInteractionSurface",
  "encodeBrowserInteractionEffect",
  "encodeBrowserInteractionEffectPattern",
  "encodeCanonicalCandidateValue",
  "gameplayAdjustResourceEffect",
  "gameplayBrowserInteractionSurface",
  "gameplayCommitEffect",
  "gameplayInvokeEffect",
  "gameplaySemanticEffectSchema",
  "gameplaySetCandidateEffect",
  "gameplaySetScalarEffect",
  "isSemanticSurfaceSnapshot",
  "normalizeBrowserInteractionRecords",
  "resolveBrowserInteractionEffect",
  "resolveBrowserInteractionIntent",
  "targetIdentityKey",
  "validateBrowserInteractionSnapshot",
]
`;
